--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/GedSargent/tailwind-empty-project/issues"
   },
-  "homepage": "https://github.com/GedSargent/tailwind-empty-project#readme"
+  "homepage": "https://github.com/GedSargent/tailwind-empty-project#readme",
+  "dependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss-cli": "^10.1.0",
+    "tailwindcss": "^3.2.4"
+  }
 }
