--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simply, empty project structure with everything needed for you to start working with Tailwind CSS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tailwindcss -i ./css/tailwind.css -o ./public/build/tailwind.css --watch"
   },
   "repository": {
     "type": "git",
